--- a/templates/index.html
+++ b/templates/index.html
@@ -364,3 +364,20 @@
     </nav> 
 
     <button id="back-to-top">Back to Top</button>
+    <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <p>&copy; 2023 ShopAndSellNow. All rights reserved to PhantomX.</p>
+            </div>
+            <div class="col-md-6">
+              <ul class="footer-links">
+                <li><a href="/">Home</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+  
+    </body>
+  </html>
